src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sudha__c</fullName>
        <label>Sudha</label>
        <picklist>
            <picklistValues>
                <fullName>sample Iteam 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sample Iteam 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sample Iteam 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sample Iteam 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>